# multi-tool-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/workspace/reports/: monthly-summary-jan.md  sales-q4.csv  team-metrics.json
data/workspace/templates/: email-template.md  report-template.md
docs/: architecture.md  security-model.md
multi_tool_mcp/: config.py  exceptions.py  models.py  server.py
multi_tool_mcp/middleware/: rate_limiter.py
multi_tool_mcp/security/: __init__.py  audit.py  auth.py  roles.py
multi_tool_mcp/services/: __init__.py  ai.py  api_proxy.py  database.py  filesystem.py
multi_tool_mcp/tools/: __init__.py  admin_tools.py  api_tools.py  db_tools.py  fs_tools.py
scripts/: audit_viewer.py  demo.py  generate_token.py  setup_db.py
tests/: conftest.py  test_api_proxy.py  test_audit.py  test_database.py  test_filesystem.py  test_rate_limiter.py  test_security.py  test_tools.py
